# kolmogorov-stack

./: .dockerignore  .env.example  .gitignore  .railwayignore  .release-verify-postfix.json  .vercelignore  AIRPORT_HANDOFF.md  CHANGELOG.md  CONTRIBUTING.md  CUsersuserDesktopkolmogorov-stack.full-suite-out.txt  CUsersuserDesktopkolmogorov-stack.testlog.txt  DEMO.md  Dockerfile  Dockerfile.gateway  FINAL_BACKEND_AUDIT_2026-05-20.md  FINAL_UIUX_PRODUCT_SURFACE_AUDIT_2026-05-20.md  ITKV-SHARD-COMBINATION-DESIGN.md  KOLM_OFF_THE_SHELF_SPEC_AND_GAP.md  KOLM_PRODUCT_UX_SPEC.md  KOLM_SOTA_ROADMAP.md  KOLM_STACK_SPEC_SHEET_2026-05-28.md  KOLM_ULTRA_PLAN_2026_05_24.md  KOLM_V1_LAUNCH_PLAN_2026_05_26.md  KOLM_VALUATION_PLAN_2026_05_23.md  KOLM_W707_SYSTEM_UPGRADE_PLAN.md  KOLM_W851_CLI_TUI_100X_PLAN.md  KOLM_W866_FORGE_DISTILL_FRONTIER_PLAN.md  KOLM_W888_RUN_FINAL_INTEGRATION_PLAN.md  KOLM_W891_V1_COMPLETION_MANUAL.md  KOLM_W893_FINAL_POLISH_PLAN.md  KOLM_W920_FIXLIST.json  KOLM_W920_FRONTIER_AUDIT.md  KOLM_W921_DEMO_SPEC.md  KOLM_W921_FRONTIER_REVIEW.md  KOLM_W921_RESEARCH.md  KOLM_W921_SPECS.json  LICENSE  PAGE-KIT-2026.md  README.md  SECURITY.md  (+20 more)
.github/: dependabot.yml
AUDIT-2026-06-15/: LAUNCH-DECISION-MEMO.md  MASTER-WORKORDER.md  launch-blockers.json  release-verify.json
_audit/: seo_v1.md
api/: cf-config.js  index.js  r2.js  runpod.js  teacher-chat.js
apps/trainer/: Dockerfile  README-multinode.md  README.md  airgap_distill_worker.py  audio.py  audio_distill.py  bench_contrastive_token.py  bench_trace_aware.py  contrastive_distill.py  dapo_runmeta.py  dapo_sampling.py  distill.py  distill_cot.py  eagle3_train.py  embedding.py  federated.py  function_calling.py  gad.py  grpo.py  inference_cache.py  instant.py  long_context.py  lora_variants.py  main.py  merge.py  models.py  moe.py  moe_to_dense.py  multinode_launch.py  nvfp4.py  online_dpo.py  preference.py  pyproject.toml  qad.py  reject_sample.py  reranker.py  reward.py  ropd.py  span_objective.py  speculative.py  (+8 more)
apps/trainer/backends/: __init__.py  cuda.py  directml.py  fal_runner.py  lambda_runner.py  local.py  mlx.py  modal_runner.py  remote_ssh.py  replicate_runner.py  rocm.py  runpod_runner.py  together_runner.py  vast_runner.py
archive/: README.md
audit-shots/: audit.mjs  issues.json  spot-check.mjs  verify-footer.mjs  verify-overflow.mjs  verify-theme.mjs
bench/: Dockerfile  README.md  requirements.txt  run.py  wave725-cold-vs-warm-bench.js  wave727-acceleration-bench.js  wave728-its-bench.py
benchmarks/: wave887-wrapper-prod-2026-05-26.json  wave887-wrapper-prod-2026-05-26.md  wave888-wrapper-tax-decomposed-2026-05-26.json  wave888-wrapper-tax-decomposed-2026-05-26.md
cli/: kolm-tui.mjs  kolm-ux.js  kolm.js
dashboards/: kolm-runtime.json
data/: .e2e-key.txt  changelog-extra.md  deploy-trinity-vllm.yml  trinity-500-compose.yml
deploy/: BYOC.md
docs/: AUDIT-SURFACE-REVIEW-2026.md  AUTHORING.md  BACKEND-AUDIT-2026.md  ECONOMICS-AUDIT-2026.md  GRAPHICS-SPEC-2026.md  KOLM_BLACK_UNICORN_SPEC.md  KOLM_DESIGN_SYSTEM_2026.md  KOLM_FINALIZED_PASS_PROGRAM.md  KOLM_UNICORN_SYSTEM.md  KOLM_WORKBENCH_AUDIT_2026-06-16.md  PRODUCT.md  PRODUCT_SURFACE_SPEC_2026-05-20.md  SECURITY-FINDING-sandbox-escape-2026-06-16.md  SEO-ELITE-2026.md  SOTA-2026-05-11.md  SOTA-amendments-2026-05-11.md  STACK-TECH-SPEC-2026-06-15.md  SYMPHONY-SCORE-2026.md  UNICORN-DESIGN-2026.md  audit-base-model-2026-05-14.md  audit-cli-2026-05-14.md  audit-compute-providers-2026-05-14.md  audit-docs-2026-05-14.md  audit-research-2026-05-14.md  audit-seo-2026-05-14.md  audit-wave99-2026-05-16.md  backend-atomic-component-deep-dive-2026-06-17.json  backend-atomic-component-deep-dive-2026-06-17.md  backend-product-depth-closeout-2026-05-23.md  backend-spec-deep-dive-review-2026-06-17.md  benchmark-evidence.md  benchmark-results-v0.1.0.md  byo-registry.md  cloud-compute-broker.md  cloud-product-readiness.md  compliance-certification-packet.md  continuous-ci.md  crypto-standards.md  crypto-trust.md  distill-strategy.md  (+38 more)
examples/: colab-compile.ipynb  demo-phi-redactor.spec.json  extract-urls.json
infra/: dns-schema.json
md-links-test/: package-lock.json  package.json
models/: README.md
public/: 404.html  500.html  _404.html  about-the-assistant.html  about.html  acceptable-use.html  account-billing.html  account-shell.css  account.html  admin.html  agents.html  airgap.html  anatomy.html  api.html  app.js  architecture.html  ask.html  assistant-widget.js  audit-docs.html  audit-log.html  audit-pricing.html  audit.html  baa.html  badge.html  benchmarks.html  book-demo.html  bounty.html  brand-refresh.css  brand.html  build-your-own.html  builder.html  buyer.html  byoc.html  capabilities.html  capture.html  captures.html  careers.html  cerebras-teacher.html  changelog.html  changelog.xml  (+248 more)
recipes/: dapo-rlvr-frontier.json  function-calling-qwen2.5-3b.json  minicpm5-1b-support-edge.json  support-gad.json  support-ropd.json  support-router-grpo.json  trinity-2000.json  trinity-onpolicy.json  trinity-qad.json  triton-kernels-grpo.json
remotion/: package-lock.json  package.json  render.mjs  still.mjs
scripts/: _build-dotkolm-fixtures.cjs  _pf-graphic-crops.mjs  _pf-live-audit.mjs  _pf-live-slices.mjs  _pf-spot.mjs  _preflight.cjs  _scrub_footer.cjs  _w889-12-rename-github-org.cjs  _w889-12-rename-public-html.cjs  _w890-2-console-log-scan.cjs  _w890-2-detect-fixed.cjs  _w890-2-eslint-summarize.cjs  _w890-2-localhost-scan.cjs  _w890-2-secrets-scan.cjs  _w890-2-style-scan.cjs  (+422 more)
sdk/python/: PUBLISHING.md  README.md  pyproject.toml
sdk/python/kolm/: __init__.py  audit.py  client.py  format.py
sdk/python/recipe/: __init__.py  cli.py  client.py
sdk/python/tests/: _node_bridge.mjs  test_audit.py
sdk/python/tests/fixtures/: sample-report.json
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: whoami.rs
sdk/rust/src/: format.rs  lib.rs
(+4001 files in other folders)
