[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kolm"
version = "0.2.0"
description = "kolm - the AI compiler. Compile any AI task into a signed .kolm file you own. Python client over the public HTTP API."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Kolm", email = "dev@kolm.ai" }]
keywords = ["llm", "compiler", "lora", "agents", "claude", "openai", "fine-tuning", "edge", "offline"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2", "twine>=5.0", "pytest>=7.0"]

[project.urls]
Homepage = "https://kolm.ai"
Repository = "https://github.com/kolm-ai/kolm"
Documentation = "https://kolm.ai/docs"
Issues = "https://github.com/kolm-ai/kolm/issues"

[project.scripts]
recipe = "recipe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kolm*", "recipe*"]
