[package]
name = "kolm"
version = "0.2.0"
edition = "2021"
description = "Rust client for the kolm.ai AI-compiler HTTP API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kolm-ai/kolm-stack"
homepage = "https://kolm.ai"
documentation = "https://docs.rs/kolm"
readme = "README.md"
keywords = ["kolm", "ai-compiler", "distill", "fine-tune", "llm"]
categories = ["api-bindings", "web-programming::http-client"]
rust-version = "1.70"

[dependencies]
# W480 - native-tls avoids the rustls/ring → mingw-gcc requirement on Windows.
# On Linux: uses openssl (libssl-dev); on macOS: secure-transport; on Windows: schannel.
ureq = { version = "2", default-features = false, features = ["json", "native-tls"] }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
mockito = "1"

[[example]]
name = "whoami"
path = "examples/whoami.rs"
